# Quantum-Shell

./: CONCEPT.md  CONCEPT_EN.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
quantum_shell/: __init__.py  contracts.py  ecosystem_bridges.py  filling.py  foundation.py  hydrogenic.py  ionization.py  orbitals.py  screening.py
scripts/: verify_package_identity.py
tests/: test_quantum_shell.py
