[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-shell-foundation"
version = "0.1.0"
description = "Quantum shell screening — hydrogenic levels, Aufbau, screening proxy, ionization scale"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["quantum_shell*"]
